[metadata]
name = db-warden
version = 0.0.1
description = A Django application to manage user permissions to the database
long_description = file: README.md
url = https://github.com/DavisRaym/django-db-warden
author = Davis Raymond Muro
author_email = davis.ray.muro@gmail.com
license = MIT
classifiers =
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.2